add: AdminWindow etc

--- a/MusicShop/Views/AdminWindow.xaml
+++ b/MusicShop/Views/AdminWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop.Views"
         mc:Ignorable="d"
-        Title="Admin" Height="750" Width="1200" MinHeight="500" MinWidth="700"
+        Title="Admin" Height="750" Width="1400" MinHeight="500" MinWidth="700" Foreground="LightBlue"
         Loaded="Window_Loaded">
     <TabControl>
         <TabItem>
@@ -31,20 +31,105 @@
                 <GroupBox  Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
                     <StackPanel>
                     <TextBlock DockPanel.Dock="Left" Text="Author:" FontSize="20" Margin="5 0"/>
-                        <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding avm.Authors}" DisplayMemberPath="Name" VerticalAlignment="Center"
-                              FontSize="20" SelectedItem="{Binding avm.SelectedAuthor}"/>
+                        <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding cvm.Authors}" DisplayMemberPath="Name" VerticalAlignment="Center"
+                              FontSize="20" SelectedItem="{Binding cvm.SelectedAuthor}"/>
+                        <TextBlock DockPanel.Dock="Left" Text="Genre:" FontSize="20" Margin="5 0"/>
+                        <ComboBox x:Name="genresList" Margin="5 10" ItemsSource="{Binding cvm.Genres}" DisplayMemberPath="Name" VerticalAlignment="Center"
+                              FontSize="20" SelectedItem="{Binding cvm.SelectedGenre}"/>
 
-                    <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="4" FontSize="20" Style="{DynamicResource RoundButtonTemplate}"/>
+
+                        <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="4" FontSize="20" Style="{DynamicResource RoundButtonTemplate}"/>
                 </StackPanel>
                 </GroupBox>
                 <GroupBox Grid.Column="1">
                     <Label Content="Plates" FontSize="20" DockPanel.Dock="Top" VerticalAlignment="Bottom"/>
                 </GroupBox>
                 <GroupBox Grid.Row="1" Grid.Column="1">
-                    <ListView x:Name="platesList" ItemsSource="{Binding pwm.Plates}" DataContext="{Binding SelectedPlate}"/>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="2*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <ScrollViewer Background="#FFF1F1F1" Margin="0,0,10,0" Grid.Row="0">
+                        <StackPanel Margin="20 20">
+                            <ListView x:Name="ListViewPlats" ItemsSource="{Binding cvm.Plates}" SelectedItem="{Binding cvm.SelectedPlate}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Background="#FFF1F1F1" BorderThickness="0" BorderBrush="#FFF1F1F1" ScrollViewer.CanContentScroll="False">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border Margin="10" Width="180" Height="240">
+                                            <StackPanel>
+                                                <Border Width="170" Height="170" CornerRadius="5" Margin="5">
+                                                    <Border.Effect>
+                                                        <DropShadowEffect ShadowDepth="1"/>
+                                                    </Border.Effect>
+                                                    <Border.Background>
+                                                        <ImageBrush ImageSource="{Binding AlbumImagePath}"/>
+                                                    </Border.Background>
+                                                </Border>
+                                                <TextBlock Margin="5 0" Text="{Binding Cost, StringFormat={}{0:C}}" FontSize="17" FontFamily="Franklin Gothic Medium"/>
+                                                <TextBlock Margin="5 0" Text="{Binding Name}" FontSize="18"/>
+                                                <TextBlock Margin="5 0" Text="{Binding Author.Name}" FontSize="12"/>
+                                            </StackPanel>
+                                        </Border>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                                <ListView.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <WrapPanel/>
+                                    </ItemsPanelTemplate>
+                                </ListView.ItemsPanel>
+                            </ListView>
+                        </StackPanel>
+                    </ScrollViewer>
+                        <GroupBox  Grid.Row="1">
+                            <Grid Grid.Row="1" Grid.Column="0" DataContext="{Binding cvm.SelectedPlate}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock Text="Name:" FontSize="20" Margin="5 0"
+                                           Grid.Row="0" Grid.Column="0"/>
+                                <TextBox x:Name="plateName"   FontSize="20"  Text="{Binding cvm.Name}" 
+                                         Grid.Row="0" Grid.Column="1"/>
+
+                                <TextBlock Text="Author:" FontSize="20" VerticalAlignment="Center" Margin="5 0"
+                                           Grid.Row="1" Grid.Column="0"/>
+                                <TextBox x:Name="plateAuthor"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" Text="{Binding cvm.Author.Name}"
+                                         Grid.Row="1" Grid.Column="2"/>
+
+                                <TextBlock Text="Publisher:" FontSize="20" VerticalAlignment="Center" Margin="5 0"
+                                           Grid.Row="2" Grid.Column="0"/>
+                                <TextBox x:Name="platePublisher"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" Text="{Binding Publisher.Name}"
+                                         Grid.Row="2" Grid.Column="1"/>
+
+                                <TextBlock DockPanel.Dock="Top" Text="Price:" FontSize="20" VerticalAlignment="Center" Margin="5 0"
+                                           Grid.Row="3" Grid.Column="0"/>
+                                <TextBox x:Name="platePrice"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" Text="{Binding Cost, StringFormat={}{0:C}}"
+                                         Grid.Row="3" Grid.Column="1"/>
+
+                                <TextBlock DockPanel.Dock="Top" Text="Amount:" FontSize="20" VerticalAlignment="Center" Margin="5 0"
+                                           Grid.Row="4" Grid.Column="0"/>
+                                <TextBox x:Name="plateAmount"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" Text="{Binding Amount}"
+                                         Grid.Row="4" Grid.Column="1"/>
+
+                                <TextBlock DockPanel.Dock="Top" Text="Tracks:" FontSize="20" VerticalAlignment="Center" Margin="5 0"
+                                           Grid.Row="5" Grid.Column="0"/>
+                                
+                            </Grid>
+
+                        </GroupBox>
+                    </Grid>
                 </GroupBox>
                 <GroupBox Grid.Column="2">
-                    <Label x:Name="adminNameLabel" Content="{Binding Name}"/>
+                    <Label x:Name="adminNameLabel" Content="{Binding account.Login}"/>
                 </GroupBox>
                 <DockPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Top">
                     <Button x:Name="addPlate" Content="Add plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"
